--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       padding: 20px;
       text-align: center;
     }
-    header img {
-      display: block;
-      margin: 0 auto 10px auto;
-      height: 120px;
+<header>
+  <img src="logo.jpg" alt="YMPO Logo" style="display: block; margin: 0 auto; height: 120px;">
+  <h1>Youth Marine Protection Organization</h1>
+  <p>Empowering students to protect our oceans</p>
+</header>
     }
     nav {
       background: #0277bd;
