--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <img src="logo.jpg" alt="YMPO Logo">
-    <h1>Youth Marine Protection Organization</h1>
+    <h1>Youth Marine Protection Organization Society</h1>
     <p>Empowering students to protect our oceans</p>
   </header>
 
